[[bin]]
name = "popcorn"
path = "src/main.rs"

[package]
name = "popcorn_cli"
version = "0.1.1"
edition = "2018"
description = "Thin Popcorn Time client"
keywords = ["cli", "popcorn"]
categories = ["command-line-utilities", "api-bindings"]
repository = "https://github.com/Ru5ty0ne/popcorn_cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1.0.42"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0" 
clap = "2.33.3"
webbrowser = "0.5.5"
nipper = "0.1.9"